2010-11-17 Alex Tutubalin <lexa@lexa.ru>
	* Nikon P7000: color matrix data and black level patch for ISO >=400
	  Thanks to Gunnar Thorburn 
        * Support for several industrial cameras based on Sony ICX 625/655 
	  sensor: JAI BB500CL/GE, SVS625CL, ptGrey GRAS-50S5C
	  Thanks to kaare
	* LibRaw 0.11.3

2010-11-11 Alex Tutubalin <lexa@lexa.ru>
        * OpenMP is completely disabled on MacOS X if compiled with -pthread
          due to well-known MacOS problem.
        * dcraw 9.05 (1.439) imported, many new cameras supported:
            Canon: G12, SX120, 60D,
            Hasselblad H4D, Nokia X2, Olympus E-5,
            Nikon: D3100, D7000, P7000,
            Panasonic: FZ40, FZ100, LX5,
            Pentax: K-r, K-5, 645D,
            Samsung GX20, WB2000
	* LibRaw 0.11.2

2010-11-10 Alex Tutubalin <lexa@lexa.ru>
	* Fixes in dcraw_emu sample command line options processing
	* LibRaw 0.11.1

2010-11-08 Alex Tutubalin <lexa@lexa.ru>
	* Fixes for Sun Studio compiler compatibility
	* Fixes for Visual Studio 2010 compatibility
	* All russian-language files are converted to UTF-8
	* LibRaw 0.11.0-Release

2010-10-18 Alex Tutubalin <lexa@lexa.ru>
           * Disabled OpenMP for wavelet_denoise under Mac OS X
           * More Visual C++ 2003 warnings cleaned in libraw/*h files
           * LibRaw 0.11-Beta7

2010-10-16 Alex Tutubalin <lexa@lexa.ru>
           * internal/dcraw_fileio.c can be compiled with -DDCRAW_VERBOSE again
           * fixed comment style in libraw_datastream.h
           * LibRaw 0.11-Beta6

2010-10-15 Alex Tutubalin <lexa@lexa.ru>

           * New changes to I/O layer. Three LibRaw_*datastream clasees are
             exists: 
               + LibRaw_buffer_datastream - buffer reaging
               + LibRaw_file_datastream - file reading using iostreams
                 (large files are no supported on some systems)
               + LibRaw_bigfile_datastream - FILE*-based file I/O
