@@ -3420,6 +3420,7 @@ void CLASS green_matching()
   const float thr = 0.01f;
   if(FC(oj, oi) != 3) oj++;
   if(FC(oj, oi) != 3) oi++;
+  if(FC(oj, oi) != 3) oj--;
 
   img = (ushort (*)[4]) calloc (height*width, sizeof *image);
   merror (img, "green_matching()");
@@ -4400,7 +4401,7 @@ void CLASS parse_thumb_note (int base, unsigned toff, unsigned tlen)
   }
 }
 
-#line 4850 "dcraw/dcraw.c"
+#line 4851 "dcraw/dcraw.c"
 void CLASS parse_makernote (int base, int uptag)
 {
   static const uchar xlat[2][256] = {
@@ -4956,7 +4957,7 @@ void CLASS parse_kodak_ifd (int base)
   }
 }
 
-#line 5410 "dcraw/dcraw.c"
+#line 5411 "dcraw/dcraw.c"
 int CLASS parse_tiff_ifd (int base)
 {
   unsigned entries, tag, type, len, plen=16, save;
@@ -6192,7 +6193,7 @@ void CLASS parse_cine()
   data_offset  = (INT64) get4() + 8;
   data_offset += (INT64) get4() << 32;
 }
-#line 6652 "dcraw/dcraw.c"
+#line 6653 "dcraw/dcraw.c"
 void CLASS adobe_coeff (const char *p_make, const char *p_model)
 {
   static const struct {
@@ -6825,7 +6826,7 @@ short CLASS guess_byte_order (int words)
   return sum[0] < sum[1] ? 0x4d4d : 0x4949;
 }
 
-#line 7288 "dcraw/dcraw.c"
+#line 7289 "dcraw/dcraw.c"
 
 float CLASS find_green (int bps, int bite, int off0, int off1)
 {
@@ -8604,7 +8605,7 @@ else if (!strcmp(model,"QV-2000UX")) {
   }
 }
 
-#line 9158 "dcraw/dcraw.c"
+#line 9159 "dcraw/dcraw.c"
 void CLASS convert_to_rgb()
 {
   int row, col, c, i, j, k;
@@ -8823,7 +8824,7 @@ int CLASS flip_index (int row, int col)
   return row * iwidth + col;
 }
 
-#line 9401 "dcraw/dcraw.c"
+#line 9402 "dcraw/dcraw.c"
 void CLASS tiff_set (ushort *ntag,
 	ushort tag, ushort type, int count, int val)
 {
